--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <div class="container">
-    <div class="left">
-      <app-menu></app-menu>
-    </div>
-    <div class=right>
-      <app-content></app-content>
-    </div>
-</div>
+<nav>
+  <ul>
+    <li><a routerLink="home">Home</a></li>
+    <li><a routerLink="">Login</a></li>
+  </ul>
+</nav>
 
+<router-outlet></router-outlet>
