--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,22 +2,22 @@
   <ul>
       <div class="header">Tárgyak</div>
       <li>
-          <a href="#maths">Matematika</a>
+          <a>Matematika</a>
       </li>
       <li>
-          <a href="#literature">Irodalom</a>
+          <a>Irodalom</a>
       </li>
       <li>
-          <a href="#grammar">Nyelvtan</a>
+          <a>Nyelvtan</a>
       </li>
       <li>
-          <a href="#history">Történelem</a>
+          <a>Történelem</a>
       </li>
       <li>
-          <a href="#chemistry">Kémia</a>
+          <a>Kémia</a>
       </li>
       <li>
-          <a href="#physics">Fizika</a>
+          <a>Fizika</a>
       </li>
   </ul>
 </div>
