--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,16 @@
-ul {
+ul{
     list-style-type: none;
     margin: 0 0 2em 0;
     padding: 0;
-}
 
-ul li {
-    display: inline;
-    margin-right: 30px;
-}
+    li{
+        display: inline;
+        margin-right: 30px;
 
-ul li a {
-    font-size: 1.5em;
+        a {
+            font-size: 1.5em;
+        }
+    }
 }
 
 a {
