--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -9,17 +9,22 @@ input[type="button"] {
     color: black;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+
+    .control-button {
+        font-size: 24px;
+        width: 50px;
+        height: 50px;
+
+        .control-button:hover {
+            background-color: #999999;
+        }
+
+    }
+    
 }
 
-input[type="button"].control-button {
-    font-size: 24px;
-    width: 50px;
-    height: 50px;
-}
 
-input[type="button"].control-button:hover {
-    background-color: #999999;
-}
+
 
 .text-field {
 	display: block; 
@@ -46,8 +51,9 @@ input[type="button"].control-button:hover {
 
 .controls {
 	text-align: center;
-}
 
-.controls input[type="button"] {
+
+    input[type="button"] {
 	margin: 100px;
+    }
 }
