--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,4 +1,6 @@
-.menu ul {
+.menu {
+
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,23 +8,26 @@
     background-color: #FFFFFF;
     border-radius: 4px;
     border: 1px solid #999999;
-}
 
-.menu ul .header {
+    .header {
     background-color: #5149c1;
     color: white;
     text-align: center;
     border-bottom: 1px solid black;
+    }
+    li {
+    a {
+        display: block;
+        color: #000;
+        padding: 8px 16px;
+        text-decoration: none;
+    
+    
+         a:hover {
+        background-color: #CCCCCC;
+        color: white;
+        }
+    }
+    }
 }
-
-.menu li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-	text-decoration: none;
-}
-
-.menu li a:hover {
-    background-color: #CCCCCC;
-	color: white;
 }
