Regisztrációs rendszer alapjának elkészítése

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <ul>
     <li><a routerLink="home">Home</a></li>
     <li><a routerLink="">Login</a></li>
+    <li><form action="/users/logout" method="POST" style="float:right"><input type="submit" value="Kilépés"></form></li>
   </ul>
 </nav>
 
