--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="header">
       Bejelentkezés
     </div>
-    <form>
+    <form method="POST" action="/users/login">
       Email:
       <input type="text" class="txt" name="email" placeholder="példa@példa.com">
       Jelszó:
