--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <div class="header">
       Regisztráció
     </div>
-    <form>
+    <form method="POST" action="/users/register">
       Email:
       <input type="text" class="txt" name="email" placeholder="példa@példa.com"> Jelszó:
       <input type="password" class="txt" name="password" placeholder="jelszó">
