--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,12 @@ ul{
         a {
             font-size: 1.5em;
         }
+
+        input[type="submit"] {
+            appearance: none;
+            border: none;
+            font-size: 1.5em;
+        }
     }
 }
 
