--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,13 +3,11 @@
     <div class="header">
       Bejelentkezés
     </div>
-    <form method="POST" action="/users/login">
-      Email:
-      <input type="text" class="txt" name="email" placeholder="példa@példa.com">
-      Jelszó:
-      <input type="password" class="txt" name="password" placeholder="jelszó">
-      <input type="submit" class="btn" name="login" value="Bejelentkezés">
-    </form>
+    Email:
+    <input type="text" class="txt" name="email" placeholder="példa@példa.com" #email>
+    Jelszó:
+    <input type="password" class="txt" name="password" placeholder="jelszó" #password>
+    <button (click)="login(email.value, password.value)">Login</button>
     <div class="footer">
         Új vagy még az oldalon? <a routerLink="register">Regisztrálj itt!</a>
     </div>
