--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,11 +3,13 @@
     <div class="header">
       Bejelentkezés
     </div>
-    Email:
-    <input type="text" class="txt" name="email" placeholder="példa@példa.com" #email>
-    Jelszó:
-    <input type="password" class="txt" name="password" placeholder="jelszó" #password>
-    <button (click)="login(email.value, password.value)">Login</button>
+    <div class="content">
+      Email:
+      <input type="text" class="txt" name="email" placeholder="példa@példa.com" #email>
+      Jelszó:
+      <input type="password" class="txt" name="password" placeholder="jelszó" #password>
+      <button (click)="login(email.value, password.value)">Login</button>
+    </div>
     <div class="footer">
         Új vagy még az oldalon? <a routerLink="register">Regisztrálj itt!</a>
     </div>
