--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,23 +1,133 @@
 <div class="menu">
   <ul>
-      <div class="header">Tárgyak</div>
-      <li>
-          <a>Matematika</a>
+    <div class="header">Tárgyak</div>
+    <li><a>Matematika</a>
+      <div class="display">
+        <ul>
+          <li><a>Számtan</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsós olvasmányok listája ide!</a></li>
+                <li><a>Felsős olvasmányok listája ide!</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a>Algebra</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsós olvasmányok listája ide!</a></li>
+                <li><a>Felsős olvasmányok listája ide!</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a>Geometria</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsós olvasmányok listája ide!</a></li>
+                <li><a>Felsős olvasmányok listája ide!</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+
+    <li><a>Irodalom</a>
+      <div class="display">
+        <ul>
+          <li><a>Olvasmányok</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsós olvasmányok listája ide!</a></li>
+                <li><a>Felsős olvasmányok listája ide!</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li><a>Verselemzés</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsós versek listája ide!</a></li>
+                <li><a>Felsős versek listája ide!</a></li>
+              </ul>
+            </div>
+          </li>
+
+          <li><a>Fogalmazás</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsós fogalmazási feladatok listája ide!</a></li>
+                <li><a>Felsős fogalmazási feladatok listája ide!</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+
+    <li><a>Nyelvtan</a>
+      <div class="display">
+        <ul>
+          <li><a>Szavak és Szószerkezetek, Szóösszetétel</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsó tagozat</a></li>
+                <li><a>Felső tagozat</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a>Mondatok és Mondattan, Mondatelemzés</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsó tagozat</a></li>
+                <li><a>Felső tagozat</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a>Nyelvtani szabályok</a>
+            <div class="display">
+              <ul>
+                <li><a>Alsó tagozat</a></li>
+                <li><a>Felső tagozat</a></li>
+              </ul>
+            </div>
+          </li>
+         </ul>
+        </div>
       </li>
-      <li>
-          <a>Irodalom</a>
-      </li>
-      <li>
-          <a>Nyelvtan</a>
-      </li>
-      <li>
-          <a>Történelem</a>
-      </li>
-      <li>
-          <a>Kémia</a>
-      </li>
-      <li>
-          <a>Fizika</a>
-      </li>
+
+    <li><a>Történelem</a>
+      <div class="display">
+        <ul>
+          <li><a>Őskor</a></li>
+          <li><a>Ókor</a></li>
+          <li><a>Középkor</a></li>
+          <li><a>Kora Újkor</a></li>
+          <li><a>Újkor</a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li><a>Kémia</a>
+      <div class="display">
+        <ul>
+          <li><a>Periódusos rendszer</a></li>
+          <li><a>Kémiai kötések</a></li>
+          <li><a>Reakciók</a></li>
+        </ul>
+      </div>
+    </li>
+
+    <li><a>Fizika</a>
+      <div class="display">
+        <ul>
+          <li><a>Fizika Törvényei</a></li>
+          <li><a>Mozgások</a></li>
+          <li><a>Erők és Erőhatások</a></li>
+          <li><a>Elektromosság</a></li>
+          <li><a>Mozgások</a></li>
+        </ul>
+      </div>
+    </li>
   </ul>
 </div>
