--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,6 +1,5 @@
 .menu {
-
-ul {
+  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -8,26 +7,33 @@ ul {
     background-color: #FFFFFF;
     border-radius: 4px;
     border: 1px solid #999999;
-
     .header {
-    background-color: #5149c1;
-    color: white;
-    text-align: center;
-    border-bottom: 1px solid black;
+      background-color: #5149c1;
+      color: white;
+      text-align: center;
+      border-bottom: 1px solid black;
     }
     li {
-    a {
+      a {
         display: block;
         color: #000;
         padding: 8px 16px;
         text-decoration: none;
-    
-    
-         a:hover {
+      }
+      a:hover {
         background-color: #CCCCCC;
         color: white;
-        }
+      }
     }
-    }
+  }
 }
+
+.display {
+  ul {
+    border: 0px;
+    border-radius: 0px;
+    li {
+     display: none;
+    }
+  }
 }
