Account modul kidolgozása
HTML, CSS létrehozása

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,3 +1,117 @@
-<p>
-  account works!
-</p>
+<div class="container">
+  <div class="panel">
+    <div class="header">
+      Adatok módosítása
+    </div>
+    <div class="content">
+      <div id="emailblock">Email módosítása</div>
+      <table>
+        <tr>
+          <td>Jelszó:</td>
+          <td>
+            <input type="password" class="txt" name="password" placeholder="jelszó" #password>
+          </td>
+        </tr>
+        <tr>
+          <td>Új Email:</td>
+          <td>
+            <input type="text" class="txt" name="newemail" placeholder="új email" > </td>
+          <td>
+            <button class="display">Változtatás</button>
+          </td>
+        </tr>
+        <tr>
+          <td>Új Email Mégegyszer:</td>
+          <td>
+            <input type="text" class="txt" name="newemail" placeholder="új email" >
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="content">
+      <div id=passwordblock> Jelszó módosítása</div>
+      <table>
+        <tr>
+          <td>Aktuális Jelszó:</td>
+          <td>
+            <input type="password" class="txt" name="password" placeholder="jelszó">
+          </td>
+        </tr>
+        <tr>
+          <td>Új Jelszó:</td>
+          <td>
+            <input type="password" class="txt" name="newpassword" placeholder="új jelszó" #password> </td>
+          <td>
+            <button class="display">Változtatás</button>
+          </td>
+        </tr>
+        <tr>
+          <td>Új Jelszó Mégegyszer:</td>
+          <td>
+            <input type="password" class="txt" name="newpassword" placeholder="jelszó mégegyszer" #password>
+          </td>
+        </tr>
+      </table>
+
+    </div>
+    <div class="content">
+      <div id=usernameblock> Felhasználónév módosítása</div>
+      <table>
+
+        <tr>
+          <td>Aktuális Jelszó:</td>
+          <td>
+            <input type="password" class="txt" name="password" placeholder="jelszó" #password>
+          </td>
+        </tr>
+        <tr>
+          <td>Új Felhasználónév:</td>
+          <td>
+            <input type="text" class="txt" name="newusername" placeholder="új név"> </td>
+          <td>
+            <button class="display">Változtatás</button>
+          </td>
+        </tr>
+        <tr>
+          <td>Új Felhasználónév Mégegyszer:</td>
+          <td>
+            <input type="text" class="txt" name="newusername" placeholder="név mégegyszer">
+          </td>
+        </tr>
+      </table>
+
+    </div>
+
+
+    <div class="results">
+
+      <h1>Matek</h1>
+      <div class="Math">
+
+      </div>
+      <h1>Irodalom</h1>
+      <div class="Literature">
+
+      </div>
+      <h1>Nyelvtan</h1>
+      <div class="Grammar">
+
+      </div>
+      <h1>Történelem</h1>
+      <div class="History">
+
+      </div>
+      <h1>Kémia</h1>
+      <div class="Chemistry">
+
+      </div>
+      <h1>Fizika</h1>
+      <div class="Physics">
+
+      </div>
+
+    </div>
+
+
+  </div>
+</div>
