--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,12 @@
 <div style="text-align:center">
   <div class="container">
-    <div class="left">
+    <aside>
       <app-menu></app-menu>
-    </div>
-    <div class=right>
-      <app-content></app-content>
-    </div>
+    </aside>
+    <section>
+      <article>
+        <app-content></app-content>
+      </article>
+    </section>
   </div>
 </div>
