--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -27,11 +27,7 @@
   }
   input[type="text"],
   input[type="password"] {
-    appearance: none;
-    border: 1px solid #999999;
-    border-radius: 2px;
-    padding: 5px;
-    margin: 20px;
+    margin: 20px auto;
     height: 25px;
   }
 }
