--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav>
   <ul>
-    <li><a routerLink="home">Home</a></li>
-    <li><a routerLink="">Login</a></li>
-    <li><a routerLink="account">Account</a></li>
-    <li><form action="/users/logout" method="POST" style="float:right"><input type="submit" value="Kilépés"></form></li>
+    <li>
+      <a routerLink="home">Főoldal</a>
+    </li>
+    <li>
+      <a routerLink="account/accsettings">Fiók</a>
+    </li>
+    <li>
+      <form action="/users/logout" method="POST" style="float:right">
+        <input type="submit" value="Kilépés">
+      </form>
+    </li>
+    <li style="float: right">
+      <a routerLink="">Bejelentkezés</a>
+    </li>
   </ul>
 </nav>
 
