--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,25 +1,27 @@
-ul{
+nav {
+  background-color: #7169E1;
+  color: white;
+  padding: 5px 20px;
+  box-shadow: 2px 4px 2px 0px gray;
+  ul {
     list-style-type: none;
-    margin: 0 0 2em 0;
     padding: 0;
-
-    li{
-        display: inline;
-        margin-right: 30px;
-
-        a {
-            font-size: 1.5em;
-        }
-
-        input[type="submit"] {
-            appearance: none;
-            border: none;
-            font-size: 1.5em;
-        }
+    li {
+      display: inline;
+      margin-right: 30px;
+      a {
+        font-size: 1.5em;
+      }
+      input[type="submit"] {
+        background: none;
+        color: white;
+        border: none;
+        font-size: 1.5em;
+      }
     }
-}
-
-a {
-    color: #000;
+  }
+  a {
+    color: white;
     text-decoration: none;
+  }
 }
