--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,3 @@
-.container {
-  width: 50%;
-
-  .left {
-	float: left;
-	width: 20%;
-  }
-
-  .right {
-	margin-left: 250px;
-  }
+aside {
+  border: none;
 }
