--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -8,6 +8,8 @@
     border-radius: 4px;
     border: 1px solid #999999;
     .header {
+      padding: 15px;
+      font-size: 24px;
       background-color: #5149c1;
       color: white;
       text-align: center;
@@ -33,7 +35,7 @@
     border: 0px;
     border-radius: 0px;
     li {
-     display: none;
+      display: none;
     }
   }
 }
