Admin komponens hozzáadása

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
     <li style="float: right">
       <a routerLink="">Bejelentkezés</a>
     </li>
+    <li style="float: right">
+      <a routerLink="admin/subjects">Admin felület</a>
+    </li>
   </ul>
 </nav>
 
