Tárgy menü feltöltése kódból

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,9 @@ nav {
       a {
         font-size: 1.5em;
       }
+      a:hover {
+        background-color: #8179F1;
+      }
       input[type="submit"] {
         background: none;
         color: white;
