--- a/src/app/home/menu/menu.component.scss
+++ b/src/app/home/menu/menu.component.scss
@@ -7,6 +7,7 @@
     background-color: #FFFFFF;
     border-radius: 4px;
     border: 1px solid #999999;
+    overflow: hidden;
     .header {
       padding: 15px;
       font-size: 24px;
@@ -27,15 +28,20 @@
         color: white;
       }
     }
+    .categories {
+      background-color: #DDDDDD;
+      margin-left: 10px;
+      .lessons {
+        margin-left: 10px;
+      }
+    }
   }
 }
 
 .display {
   ul {
+    display: none;
     border: 0px;
     border-radius: 0px;
-    li {
-      display: none;
-    }
   }
 }
