--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,14 @@ body {
   font-family: "Raleway", "Arial";
 }
 
+a {
+  user-select: none;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 * {
   font-family: "Raleway", "Arial";
 }
