admin komponens létrehozva
html + scss

--- a/src/app/admin/subjects/subjects.component.html
+++ b/src/app/admin/subjects/subjects.component.html
@@ -2,4 +2,29 @@
   <div class="header">
     Tárgyak szerkesztése
   </div>
+  <div class="content">Elérhető Tárgyak
+<div class="kurzusok">
+  <button id="Math" >Matematika</button>
+  <button id="Literature">Irodalom</button>
+  <button id="Grammar">Nyelvtan</button>
+  <button id="History">Történelem</button>
+  <button id="Chemistry">Kémia</button>
+  <button id="Physics">Fizika</button>
+  <hr>
+  <div class="kategoria">
+    <div>Kategóriák</div>
+      <button >Kat</button>
+      <button >Eg</button>
+      <button >Oria</button>
+      <hr>
+  </div>
+  <div class="lecke">
+    <div>Leckék</div>
+      <button id="Math" >Lec</button>
+      <button id="Literature">Ke</button>
+      <button id="Grammar">lecke</button>
+  </div>
 </div>
+</div>
+  </div>
+
