--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <nav>
   <ul>
     <li>
-      <a (click)="routeWithAuthentication('home')">Főoldal</a>
+      <img src="./assets/logo.png" width=30 height=30 (click)="routeWithAuthentication('home')" style="vertical-align: middle"
+      />
     </li>
     <li>
       <a (click)="routeWithAuthentication('account/accsettings')">Fiók</a>
