Loginnál, admin felületnél hiba ablakok feldobása

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <a routerLink="">Bejelentkezés</a>
     </li>
     <li style="float: right">
-      <a (click)="routeWithAuthentication('admin/subjects')">Admin felület</a>
+      <a (click)="routeWithAdminAuthentication('admin/subjects')">Admin felület</a>
     </li>
   </ul>
 </nav>
