--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 body {
   width: 100wh;
   height: 90vh;
